crates/brehon-tui/src/run/snapshots/brehon_tui__run__tests__dashboard_activity_empty_card.snap
---
source: crates/agora-tui/src/run/mod.rs
assertion_line: 2775
expression: snapshot
---
│╭─ Activity ─────────────────────────────────────────────────────────────────────────────────────────────────────────╮│
││                           ╭─ Activity ────────────────────────────────────────────────╮                            ││
││                           │                    ◌ No recent events                     │                            ││
││                           │              waiting for lifecycle activity               │                            ││
││                           │  resets, deliveries, recoveries, and crashes stream here  │                            ││
││                           ╰───────────────────────────────────────────────────────────╯                            ││
││                                                                                                                    ││
│╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│
