crates/brehon-tui/src/run/snapshots/brehon_tui__run__tests__dashboard_agents_empty_card.snap
---
source: crates/agora-tui/src/run/mod.rs
expression: snapshot
---
│╭─ Factory Status ───────────────────────────────────────────────────────────────────────────────────────────────────╮│
││                                   ╭─ Start here ──────────────────────────────╮                                    ││
││                                   │            ⬡ No agents online             │                                    ││
││                                   │          start an agent with C-n          │                                    ││
││                                   ╰───────────────────────────────────────────╯                                    ││
│╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│
