crates/brehon-tui/src/run/snapshots/brehon_tui__run__tests__dashboard_panel_titles_embedded.snap
---
source: crates/agora-tui/src/run/mod.rs
assertion_line: 2656
expression: snapshot
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│╭─ Factory Status ───────────────────────────────────────────────────────────────────────────────────────────────────╮│
││     Agent         CLI     Provider                                                                   Status        ││
││  ▰  soft-ram-33   codex   codex-ollama-worker                                                        ◐ starting    ││
││  1/1 registered  |  1 workers  0 reviewers  0 advisors                                                             ││
│╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│
│╭─ Tasks ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮│
││  T-1           in_progress     ▰ worker-1        Audit panel usage                                                 ││
││                                                                                                                    ││
││                                                                                                                    ││
│╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│
│╭─ Activity ─────────────────────────────────────────────────────────────────────────────────────────────────────────╮│
││                           ╭─ Activity ────────────────────────────────────────────────╮                            ││
││                           │                    ◌ No recent events                     │                            ││
