crates/brehon-tui/src/run/snapshots/brehon_tui__run__tests__dashboard_tasks_empty_card.snap
---
source: crates/agora-tui/src/run/mod.rs
expression: snapshot
---
│╭─ Tasks ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮│
││                                  ╭─ Queue ─────────────────────────────────────╮                                   ││
││                                  │             ◆ No tasks assigned             │                                   ││
││                                  │        wait for supervisor dispatch         │                                   ││
││                                  ╰─────────────────────────────────────────────╯                                   ││
│╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│
