crates/brehon-tui/src/run/snapshots/brehon_tui__run__tests__pane_error_dead_snapshot.snap
---
source: crates/brehon-tui/src/run/mod.rs
assertion_line: 5364
expression: snapshot
---
╭─ BREHON / ▰ worker-panic ──────────────────────────────────────────────────────────────────── codex / codex  [reset]─╮
│retry unavailable                                                                                                     │
│                                                                                                                      │
╰─ exited with error: panicked-agent fixture ──────────────────────────────────────────────────────────────────────────╯
