crates/brehon-tui/src/run/snapshots/brehon_tui__run__tests__pane_header_footer_states.snap
---
source: crates/brehon-tui/src/run/mod.rs
assertion_line: 5463
expression: snapshot
---
╭─ BREHON / ⬡ reviewer-opus ───────────────────────────────────────────────────────── copilot / copilot-reviewer-opus ─╮
╰─ running • ReadFile • ⏱  00:00 ──────────────────────────────────────────────────────────────────────────────────────╯
╭─ BREHON / ▰ worker-1 ────────────────────────────────────────────────────────────────── codex-worker / codex-worker ─╮
╰─ idle ───────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ BREHON / ◉ claude-supervisor ───────────────────────────────────────────────────────────────────── claude / claude ─╮
╰─ error • exec ───────────────────────────────────────────────────────────────────────────────────────────────────────╯
